# communication_netmanager_ext

./: .gitignore  BUILD.gn  Cargo.toml  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  hisysevent.yaml  netmanager_ext_config.gni  ohos.build  setup_context.cpp
frameworks/c/net_trafficfilter/: BUILD.gn
frameworks/ets/ani/: BUILD.gn
interfaces/innerkits/mdnsclient/: BUILD.gn  IDiscoveryCallback.idl  IMdnsService.idl  IRegistrationCallback.idl  IResolveCallback.idl  libmdns_kits.map  mdns_blocklist.txt
interfaces/innerkits/netfirewallclient/: BUILD.gn
interfaces/innerkits/netshareclient/: BUILD.gn  INetworkShareService.idl  libnetshare_kits.map
interfaces/innerkits/netvpnclient/: BUILD.gn  INetworkVpnService.idl  IVpnEventCallback.idl  libnet_vpn_permission_if.map
interfaces/innerkits/networksliceclient/: BUILD.gn
interfaces/innerkits/vpnextension/: BUILD.gn
interfaces/innerkits/wearabledistributednetclient/: BUILD.gn  IWearableDistributedNet.idl  libwearable_distributed_net_kits.map
interfaces/kits/c/: BUILD.gn  libnet_ethernet.ndk.json
services/etc/init/: BUILD.gn  UrspConfig1.xml  UrspConfig2.xml  eth_wpa_supplicant.conf  ethernet.cfg  mdnsmanager.cfg  reportUrsp.json  vpnmanager.cfg
services/ethernetmanager/: BUILD.gn  ethernet_blocklist.txt
services/ethernetmanager/config/: ethernet_interfaces.json
services/ethernetmanager/include/: dev_interface_state.h  eap_hdi_wpa_manager.h  ethernet_configuration.h  ethernet_dhcp_callback.h  ethernet_dhcp_controller.h  ethernet_lan_management.h  ethernet_management.h  ethernet_service.h  ethernet_service_common.h  netLink_rtnl.h  net_eap_callback_proxy.h  net_eap_handler.h  nlk_event_handle.h
services/ethernetmanager/src/: dev_interface_state.cpp  eap_hdi_wpa_manager.cpp  ethernet_configuration.cpp  ethernet_dhcp_controller.cpp  ethernet_lan_management.cpp  ethernet_management.cpp  ethernet_service.cpp  ethernet_service_common.cpp  netLink_rtnl.cpp  net_eap_callback_proxy.cpp  net_eap_handler.cpp
services/mdnsmanager/: BUILD.gn  cfi_blocklist.txt
services/mdnsmanager/include/: mdns_manager.h  mdns_protocol_impl.h  mdns_service.h  net_interface_callback.h
services/mdnsmanager/src/: mdns_manager.cpp  mdns_protocol_impl.cpp  mdns_service.cpp  mdns_socket_listener.cpp  net_interface_callback.cpp
services/netfirewallmanager/: BUILD.gn
services/netfirewallmanager/config/: default_firewall_rule.json
services/netfirewallmanager/include/: netfirewall_analysis_json.h  netfirewall_database.h  netfirewall_db_helper.h  netfirewall_default_rule_parser.h  netfirewall_hisysevent.h  netfirewall_intercept_record_callback_proxy.h  netfirewall_intercept_recorder.h  netfirewall_policy_manager.h  netfirewall_preference_helper.h  netfirewall_preferences_util.h  netfirewall_rule_manager.h  netfirewall_rule_native_helper.h  netfirewall_service.h  netfirewall_stub.h  nettrafficfilter_iptables_command_builder.h  nettrafficfilter_redirect_manager.h  nettrafficfilter_redirector_context.h
services/netfirewallmanager/src/: netfirewall_analysis_json.cpp  netfirewall_database.cpp  netfirewall_db_helper.cpp  netfirewall_default_rule_parser.cpp  netfirewall_hisysevent.cpp  netfirewall_intercept_record_callback_proxy.cpp  netfirewall_intercept_recorder.cpp  netfirewall_policy_manager.cpp  netfirewall_preference_helper.cpp  netfirewall_preferences_util.cpp  netfirewall_rule_manager.cpp  netfirewall_rule_native_helper.cpp  netfirewall_service.cpp  netfirewall_stub.cpp  nettrafficfilter_iptables_command_builder.cpp  nettrafficfilter_redirect_manager.cpp  nettrafficfilter_redirector_context.cpp
services/networksharemanager/: BUILD.gn  cfi_blocklist.txt  network_share_config.cfg
services/networksharemanager/include/: net_datashare_utils.h  networkshare_configuration.h  networkshare_hisysevent.h  networkshare_main_statemachine.h  networkshare_notification.h  networkshare_service.h  networkshare_state_common.h  networkshare_sub_statemachine.h  networkshare_tracker.h  networkshare_trafficlimit.h  networkshare_upstreammonitor.h  router_advertisement_daemon.h  router_advertisement_params.h
services/networksharemanager/src/: net_datashare_utils.cpp  networkshare_configuration.cpp  networkshare_hisysevent.cpp  networkshare_main_statemachine.cpp  networkshare_notification.cpp  networkshare_service.cpp  networkshare_sub_statemachine.cpp  networkshare_tracker.cpp  networkshare_trafficlimit.cpp  networkshare_upstreammonitor.cpp  router_advertisement_daemon.cpp  router_advertisement_params.cpp
services/networkslicemanager/: BUILD.gn
services/networkslicemanager/include/: allowednssaiconfig.h  broadcast_proxy.h  dns_result_callback.h  hwnetworkslicemanager.h  net_conn_callback.h  networkslice_event.h  networkslice_kernel_proxy.h  networkslice_loop_manager.h  networkslice_service.h  networkslice_service_base.h  networkslice_stub.h  networkslicecommconfig.h  networkslicemanager.h  networkslicemsgcenter.h  networksliceutil.h  nrunsolicitedmsgparser.h  state_utils.h  urspconfig.h
services/networkslicemanager/src/: allowednssaiconfig.cpp  (+15 more)
services/vpnmanager/: BUILD.gn  cfi_blocklist.txt
services/wearabledistributednetmanager/: BUILD.gn
test/: BUILD.gn
test/datashare/: net_datashare_utils_iface_mock.cpp
test/ethernetmanager/: BUILD.gn
test/mdnsmanager/: BUILD.gn
test/netfirewallmanager/: BUILD.gn
test/netmanager_ext_mock_test/: mock_i_discovery_callback_test.h  mock_i_net_conn_base_service.h  mock_i_net_intercept_record_callback_test.h  mock_i_network_conn_service.h  mock_i_network_vpn_service.h  mock_isharing_event_callback_test.h  mock_netfirewall_service_stub_test.h  mock_networkvpn_service_stub_test.h  mock_vpn_event_callback_test.h
test/networksharemanager/: BUILD.gn
test/networkslicemanager/: BUILD.gn
test/security/: common_mock_netmanager_permission.cpp  netmanager_ext_test_security.cpp  netmanager_ext_test_security.h
test/vpnmanager/: BUILD.gn
test/wearabledistributednetmanager/: BUILD.gn
tools/ohos-networkShare/: BUILD.gn  README.md  ohos-networkShare.json
utils/: BUILD.gn  cfi_blocklist.txt
(+738 files in other folders)
