# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

SUBSYSTEM_DIR = "//foundation/communication"
NETMANAGER_EXT_ROOT = "$SUBSYSTEM_DIR/netmanager_ext"
FRAMEWORKS_SRC = "$NETMANAGER_EXT_ROOT/frameworks/native/externalvpnclient/src"
INTERFACES_INCLUDE =
    "$NETMANAGER_EXT_ROOT/interfaces/innerkits/externalvpnclient/include"
INTERFACES_DIR = "$NETMANAGER_EXT_ROOT/interfaces/innerkits/externalvpnclient"
SERVICES_EXTERNALVPNMANAGER = "$NETMANAGER_EXT_ROOT/services/externalvpnmanager"
EXT_INNERKITS_ROOT = "$NETMANAGER_EXT_ROOT/interfaces/innerkits"
ETHERNETMANAGER_INNERKITS_SOURCE_DIR =
    "$NETMANAGER_EXT_ROOT/frameworks/native/ethernetclient"
ETHERNETMANAGER_SOURCE_DIR = "$NETMANAGER_EXT_ROOT/services/ethernetmanager"

NETWORKSHAREMANAGER_SOURCE_DIR =
    "$NETMANAGER_EXT_ROOT/services/networksharemanager"
NETWORKSHAREMANAGER_INNERKITS_SOURCE_DIR =
    "$NETMANAGER_EXT_ROOT/frameworks/native/netshareclient"

NETMANAGER_BASE_ROOT = "$SUBSYSTEM_DIR/netmanager_base"
NETCONNMANAGER_COMMON_DIR = "$NETMANAGER_BASE_ROOT/services/common"
NETSYSCONTROLLER_ROOT_DIR = "$NETMANAGER_BASE_ROOT/services/netsyscontroller"
NETCONNMANAGER_SOURCE_DIR = "$NETMANAGER_BASE_ROOT/services/netconnmanager"
BASE_INNERKITS_ROOT = "$NETMANAGER_BASE_ROOT/interfaces/innerkits"
NETMANAGERNATIVE_ROOT = "$NETMANAGER_BASE_ROOT/services/netmanagernative"
NETCONNMANAGER_INNERKITS_SOURCE_DIR =
    "$NETMANAGER_BASE_ROOT/frameworks/native/netconnclient"
NETMANAGER_PREBUILTS_DIR = "$NETMANAGER_BASE_ROOT/prebuilts"
NETSYSCONTROLLER_ROOT_DIR = "$NETMANAGER_BASE_ROOT/services/netsyscontroller"
NETCONNMANAGER_UTILS_DIR = "$NETMANAGER_BASE_ROOT/utils"

NETCONNMANAGER_COMMON_DIR = "$NETMANAGER_BASE_ROOT/services/common"
DHCP_MANAGER_ROOT = "//foundation/communication/wifi/dhcp"
WIFI_MANAGER_ROOT = "//foundation/communication/wifi/wifi"
WIFI_MANAGER_INNERKITS_DIR = "$WIFI_MANAGER_ROOT/interfaces/kits/c"
WIFI_FRAMEWORK_NATIVE_INCLUDE = "$WIFI_MANAGER_ROOT/frameworks/native/include"
BLUETOOTH_ROOT = "//foundation/communication/bluetooth"

UTILS_ROOT = "//utils"
THIRD_PARTY_ROOT = "//third_party"

use_js_debug = false

declare_args() {
  enable_netmgr_ext_debug = true
  netmanager_ext_feature_ethernet = true
  netmanager_ext_feature_share = true
}
