# Copyright (c) 2025-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("netmanager_ext_test") {
  testonly = true
  deps = [
    "ethernetmanager:fuzztest",
    "ethernetmanager:unittest",
    "mdnsmanager:fuzztest",
    "mdnsmanager:unittest",
    "netfirewallmanager:fuzztest",
    "netfirewallmanager:unittest",
    "networksharemanager:fuzztest",
    "networksharemanager:unittest",
    "vpnmanager:fuzztest",
    "vpnmanager:unittest",
    "wearabledistributednetmanager:unittest",
  ]
}
