# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("common_target") {
  deps = [ ":net_manager_ext_common" ]
}

config("netmgr_ext_common_config") {
  include_dirs = [ "log/include" ]
}

ohos_shared_library("net_manager_ext_common") {
  sources = [ "log/src/netmgr_ext_log_wrapper.cpp" ]

  defines = [
    "NETMGR_EXT_LOG_TAG = \"NetMgrExtCommon\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (is_standard_system) {
    defines += [ "STANDARD_SYSTEM_ENABLE" ]
  }

  public_configs = [
    ":netmgr_ext_common_config",
    "//utils/native/base:utils_config",
  ]

  public_deps = [ "//utils/native/base:utils" ]

  if (is_double_framework) {
    cflags_cc = [ "-DCONFIG_DUAL_FRAMEWORK" ]
  }

  if (is_standard_system) {
    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }

  external_deps += [
    "eventhandler:libeventhandler",
    "preference:native_preference",
  ]

  part_name = "netmanager_ext"
  subsystem_name = "communication"
}
