# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_ext/netmanager_ext_config.gni")

ohos_shared_library("ethernet_manager") {
  sources = [
    "$ETHERNETMANAGER_SOURCE_DIR/src/dev_interface_state.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/ethernet_configuration.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/ethernet_dhcp_controller.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/ethernet_management.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/ethernet_service.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/ethernet_service_common.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/netLink_rtnl.cpp",
    "$ETHERNETMANAGER_SOURCE_DIR/src/stub/ethernet_service_stub.cpp",
  ]

  include_dirs = [
    "$BASE_INNERKITS_ROOT/ethernetclient/include/proxy",
    "$BASE_INNERKITS_ROOT/netstatsclient/include",
    "$NETCONNMANAGER_UTILS_DIR/common_utils/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$ETHERNETMANAGER_SOURCE_DIR/include",
    "$ETHERNETMANAGER_SOURCE_DIR/include/stub",
    "$BASE_INNERKITS_ROOT/include",
    "$BASE_INNERKITS_ROOT/netconnclient/include",
    "$BASE_INNERKITS_ROOT/dnsresolverclient/include",
    "$BASE_INNERKITS_ROOT/ethernetclient/include",
    "$NETSYSCONTROLLER_ROOT_DIR/include",
    "//foundation/communication/wifi/dhcp/services/mgr_service/include",
    "//foundation/communication/wifi/dhcp/interfaces/inner_api/include",
    "//foundation/communication/wifi/dhcp/interfaces/inner_api/interfaces",
    "$BASE_INNERKITS_ROOT/netmanagernative/include",
  ]

  deps = [
    "$BASE_INNERKITS_ROOT/netconnclient:net_conn_manager_if",
    "$EXT_INNERKITS_ROOT/ethernetclient:ethernet_manager_if",
    "$EXT_INNERKITS_ROOT/ethernetclient:ethernet_parcel",
    "$NETCONNMANAGER_COMMON_DIR:net_service_common",
    "$NETCONNMANAGER_UTILS_DIR:net_manager_common",
    "$NETMANAGER_BASE_ROOT/services/netconnmanager:net_conn_manager",
    "$NETMANAGER_EXT_ROOT/utils:net_manager_ext_common",
    "$NETSYSCONTROLLER_ROOT_DIR:netsys_controller",
    "//foundation/communication/wifi/dhcp/services/mgr_service:dhcp_manager_service",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"EthernetManager\"",
    "LOG_DOMAIN = 0xD0015B0",
    "USER_CONFIG_DIR = \"/data/ethernet/\"",
    "NETWORK_CONFIG_PATH = \"/system/etc/communication/netmanager_ext/ethernet_interfaces.json\"",
  ]

  if (enable_netmgr_ext_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_ext"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("ethernet_interfaces") {
  source = "$NETMANAGER_EXT_ROOT/services/ethernetmanager/config/ethernet_interfaces.json"
  install_enable = true
  relative_install_dir = "communication/netmanager_ext"
  part_name = "netmanager_ext"
}
